DOC: Ignore topmost group shape as we do in libmso.

* The topmost group shape (patriarch shape) is ignored in libmso.
* It was not ignored in the mswordodf filter, because the group rectangle
  was always set to a NULL rectangle and I was waiting for some test data
  to get into problems.  A few test files where the rectangle is set
  to negative values were found and now the patriarch can be ignored properly.

BUG:274126